# Symbiont

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: constants.md  math.md  node.md  types.md
docs/architecture/: data-flow.md  network.md  node.md  overview.md
docs/concepts/: biological-foundations.md  core-principles.md  glossary.md  introduction.md
docs/master design docs/: Symbiont_Master_Reference.md  Symbiont_v0.1_Complete_Specification.md  Symbiont_v0.1_Language_Agnostic.md
docs/protocol/: convergence.md  defense-signaling.md  orchestration.md  physarum-equation.md  reciprocity.md  state-machines.md  trust-computation.md
docs/tutorials/: building-workflows.md  getting-started.md  running-simulations.md  understanding-trust.md
symbiont-cli/: Cargo.toml
symbiont-cli/src/: main.rs
symbiont-core/: Cargo.toml
symbiont-core/src/: capability.rs  connection.rs  constants.rs  convergence.rs  defense.rs  detection.rs  handoff.rs  interaction.rs  lib.rs  math.rs  node.rs  routing.rs  trust.rs  types.rs  workflow.rs
symbiont-sim/: Cargo.toml
symbiont-sim/src/: agents.rs  events.rs  lib.rs  metrics.rs  network.rs  runner.rs
symbiont-sim/src/scenarios/: adversary.rs  mod.rs  trust_emergence.rs  workflow.rs
