[package]
name = "symbiont-cli"
description = "Symbiont Protocol CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "symbiont"
path = "src/main.rs"

[dependencies]
symbiont-sim = { path = "../symbiont-sim" }
symbiont-core = { path = "../symbiont-core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
