[package]
name = "symbiont-sim"
description = "Symbiont Protocol Simulation Harness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
symbiont-core = { path = "../symbiont-core" }
tokio.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
csv.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
